# ordvec

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-MIT  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  cliff.toml  codecov.yml  deny.toml
.agents/skills/: custom-codereview-guide.md
.cortextrace/: config.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor-requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/actions/setup-intel-sde/: action.yml
.github/pull_request_bodies/: caif-ifc-index-authority.md
.github/workflows/: actionlint.yml  audit.yml  changelog.yml  ci.yml  codeql.yml  cortextrace-free.yml  coverage-python.yml  coverage.yml  fuzz.yml  openhands-pr-review.yml  python.yml  release-crate.yml  release-python.yml  release.yml  sanitizers.yml  scorecard.yml  zizmor.yml
benchmarks/: ADVERSARIAL_REVIEW.md  README.md  corpus_zoo_results.md  crt_seam_oracle_results.md  density_collapse_results.md  rank_modes_results.txt  rigidity_impossibility_proofs.md  shard_recall_results.md  spectral_probe_results.md  two_stage_caller_owned_dim1024.txt  twonn_id_results.md
benchmarks/beir/: README.md  beir_eval.py  beir_plot.py  beir_prepare.py  beir_report.py  common.py  requirements.txt
benchmarks/beir-bench/: Cargo.toml
benchmarks/beir-bench/src/: main.rs
benchmarks/lean/: README.md  VernierSeamDensity.lean
docs/: ALTERNATIVES_CONSIDERED.md  FOLLOWUP_BODY_KERNEL_TIE_BREAK.md  INDEX_AUTHORITY_RECEIPTS.md  INDEX_PROVENANCE.md  PERSISTED_FORMAT.md  RANK_MODES.md  artifact-platform-matrix.md  bindings-safety.md  c-api.md  compatibility-policy.md  determinism.md  msrv-and-features.md
examples/: bench_contingency.rs  bench_rank.rs  bge_kernel_bench.rs  density_collapse.rs  embed_ollama.py  gen_corpus.rs  quickstart.rs  shard_recall.rs  spectral_probe.rs  tau_rerank_bakeoff.rs  two_stage_bench.rs  twonn_id.rs
examples/caif/: trec-covid-sign-rq2.index-authority.json
experiments/ordinal-routing-research/: README.md  REAL_CORPUS_RUNBOOK.md  centering_recall.rs  conjecture_citation_audit.md  crt_seam_oracle.rs  crt_seam_oracle_results.md  density_collapse.rs  density_collapse_results.md  fib_address_gate.rs  fib_directions.rs  fib_reduction.rs  gen_corpus.rs  length_mixture_lake_results.md  make_lake.py  make_length_lake.py  oblivious_directions_results.md  overlap_decomp.rs  partition_balance.rs  rigidity_impossibility_proofs.md  shard_recall.rs  shard_recall_results.md  spectral_probe.rs  subspace_directions.rs  tau_rerank_bakeoff.rs  tau_rerank_bakeoff_results.md  twonn_id.rs  twonn_id_results.md  uniformity_lemma.rs
experiments/ordinal-routing-research/withdrawn/: README.md  spectral_probe_results.md
fuzz/: .gitignore  Cargo.toml  run_full_fuzz.sh
fuzz/fuzz_targets/: fastscan_b2.rs  load_bitmap.rs  load_fastscan.rs  load_rank.rs  load_rankquant.rs  load_sign_bitmap.rs  roundtrip_rankquant.rs  scratch.rs  search_rankquant.rs  signbitmap_rankquant_twostage.rs
ordvec-ffi/: Cargo.toml
ordvec-ffi/include/: ordvec.h
ordvec-ffi/src/: lib.rs
ordvec-ffi/tests/: c_link_smoke.rs
ordvec-go/: README.md  doc.go  go.mod  ordvec.go  ordvec_test.go
ordvec-manifest/: Cargo.toml  README.md
ordvec-manifest-python/: Cargo.toml  README.md  pyproject.toml
ordvec-manifest-python/python/ordvec_manifest/: __init__.py
ordvec-manifest-python/src/: lib.rs
ordvec-manifest-python/tests/: test_manifest_bindings.py
ordvec-manifest/src/: lib.rs  main.rs  sqlite.rs
ordvec-manifest/tests/: derived_limits.rs  deterministic.rs  hash_helpers.rs  manifest.rs  verification_codes.rs  verified_decode.rs
ordvec-manifest/tests/golden/: .gitattributes  manifest.v2.json
ordvec-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
ordvec-python/python/ordvec/: __init__.py  _ordvec.pyi
ordvec-python/src/: lib.rs
ordvec-python/tests/: test_bitmap.py  test_input_dtype.py  test_input_guards.py  test_primitives.py  test_rank.py  test_rank_quant.py  test_redteam_fuzz.py  test_sign_bitmap.py  test_two_stage.py
policies/: index-authority.default-policy.json
src/: bitmap.rs  bucket_code.rs  const_weight_bitmap.rs  contingency.rs  fastscan.rs  format.rs  lib.rs  multi_bucket.rs  quant.rs  quant_kernels.rs  rank.rs  rank_io.rs  sign_bitmap.rs  util.rs
src/rank_index/: bitmap.rs  fastscan.rs  index.rs  mod.rs  multi_bucket.rs  quant.rs  quant_kernels.rs  util.rs
tests/: alloc_free.rs  bucket_code_contingency.rs  debug_serde.rs  deprecated_aliases.rs  determinism_contract.rs  persistence_compat.rs  redteam_alpha.rs  redteam_beta.rs  redteam_delta.rs  redteam_gamma.rs  release_environment_settings.sh  release_publish_invariants.py  release_publish_invariants.sh  release_pypi_canonical_dist.py  release_pypi_canonical_dist_tests.py  release_signed_release_invariants.sh  tiled_candgen.rs  verify_index_authority_test.py
tests/index/: bitmap.rs  fastscan.rs  finite.rs  loader_validation.rs  main.rs  multi_bucket.rs  quant.rs  quant_b8.rs  rank.rs  two_stage.rs
tests/rank_index/: bitmap.rs  fastscan.rs  index.rs  main.rs  multi_bucket.rs  quant.rs
tools/: verify_index_authority.py
