[package]
name = "ordvec"
version = "0.2.0"
edition = "2021"
rust-version = "1.89" # AVX-512 intrinsics stabilized in 1.89.0; also clears the 1.87 floor from u64::is_multiple_of
description = "Training-free ordinal & sign quantization for vector retrieval"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Fieldnote-Echo/ordvec"
homepage = "https://github.com/Fieldnote-Echo/ordvec"
readme = "README.md"
keywords = ["vector-search", "quantization", "nearest-neighbor", "ann", "simd"]
categories = ["algorithms", "science", "compression"]

# Keep dev/internal files out of the published crate — they stay in the repo
# but aren't useful to crate consumers.
exclude = [
    ".github/",
    ".gitignore",
    "CLAUDE.md",
    "deny.toml",
    "docs/ALTERNATIVES_CONSIDERED.md",
    "docs/FOLLOWUP_BODY_KERNEL_TIE_BREAK.md",
]

# docs.rs build configuration: build with default features only, so the
# experimental MultiBucketBitmap scaffold stays off the published docs.
# (The `#[doc(hidden)]` FastScan path is hidden by its attribute either way.)
[package.metadata.docs.rs]
all-features = false

[dependencies]
rayon = "1.10"
ordered-float = "5"

[dev-dependencies]
# Test/bench corpora are seeded with these; not needed by the library.
rand = "0.8"
rand_chacha = "0.3"

[features]
# SIMD is always compiled, never feature-gated: x86_64 dispatches AVX-512/AVX2 at
# runtime via is_x86_feature_detected!, aarch64 uses NEON (baseline, no detection),
# wasm32 uses simd128 when built with -C target-feature=+simd128, and every other
# target takes the scalar fallback. `experimental` exposes MultiBucketBitmap
# (research scaffold), kept off the stable surface.
experimental = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Workspace: the `ordvec-python` member holds the PyO3/maturin bindings shipped to
# PyPI as `ordvec`. It is `publish = false` and ships separately (never via
# crates.io). `default-members = ["."]` keeps bare `cargo build/test/clippy` scoped
# to the core crate, so the existing CI gates are unaffected; the bindings get their
# own CI job. The single workspace `Cargo.lock` gains pyo3/numpy + transitives.
[workspace]
resolver = "2"
members = ["ordvec-python"]
default-members = ["."]
# fuzz/ is a cargo-fuzz crate built only via `cargo +nightly fuzz`. Keep it out of
# the workspace so it stays a standalone crate (its own Cargo.lock) and `cargo fuzz`
# run from fuzz/ doesn't error on "wrong workspace".
exclude = ["fuzz"]
