[package]
name = "ordvec"
version = "0.5.0"
edition = "2021"
rust-version = "1.89" # AVX-512 intrinsics stabilized in 1.89.0; also clears the 1.87 floor from u64::is_multiple_of
description = "Training-free ordinal & sign quantization for vector retrieval"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Project-Navi/ordvec"
homepage = "https://github.com/Project-Navi/ordvec"
documentation = "https://docs.rs/ordvec"
readme = "README.md"
keywords = ["vector-search", "quantization", "nearest-neighbor", "ann", "simd"]
categories = ["algorithms", "science", "compression"]

# Keep dev/internal files out of the published crate — they stay in the repo
# but aren't useful to crate consumers.
exclude = [
    ".agents/",
    ".claude/",
    ".codex/",
    ".github/",
    ".gitignore",
    ".playwright-mcp/",
    # The BEIR harness + figures + its bench crate are dev tooling — not shipped
    # in the published crate. (benchmarks/rank_modes_results.txt stays IN the
    # package: the README links it and the release-publish invariant requires it.)
    "benchmarks/beir/",
    "benchmarks/beir-bench/",
    "CLAUDE.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "DCO",
    "GOVERNANCE.md",
    "RELEASING.md",
    "ROADMAP.md",
    "SECURITY.md",
    "cliff.toml",
    "THREAT_MODEL.md",
    "codecov.yml",
    "deny.toml",
    "docs/ALTERNATIVES_CONSIDERED.md",
    "docs/FOLLOWUP_BODY_KERNEL_TIE_BREAK.md",
    "docs/INDEX_PROVENANCE.md",
    "docs/c-api.md",
    "experiments/",
    "fuzz/",
    "ordvec-ffi/",
    "ordvec-go/",
    "ordvec-manifest/",
    "ordvec-manifest-python/",
    "ordvec-python/",
    "tests/__pycache__/",
    "tests/release_environment_settings.sh",
    "tests/release_pypi_canonical_dist.py",
    "tests/release_pypi_canonical_dist_tests.py",
    "tests/release_publish_invariants.py",
    "tests/release_publish_invariants.sh",
    "tests/release_signed_release_invariants.sh",
]

# docs.rs build configuration: build with default features only. Stable default
# APIs, including `RankQuantFastscan`, are documented; the experimental
# MultiBucketBitmap scaffold stays off the published docs.
[package.metadata.docs.rs]
all-features = false

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
# Test/bench corpora are seeded with these; not needed by the library.
rand = "0.10"
rand_chacha = "0.10"

[features]
# SIMD is always compiled, never feature-gated: x86_64 dispatches AVX-512/AVX2 at
# runtime via is_x86_feature_detected!, aarch64 uses NEON (baseline, no detection),
# wasm32 uses simd128 when built with -C target-feature=+simd128, and every other
# target takes the scalar fallback. `experimental` exposes MultiBucketBitmap
# (research scaffold), kept off the stable surface.
experimental = []
serde = ["dep:serde"]
# `test-utils` exposes internal dispatch probes used by the crate's own integration
# tests (e.g. the allocation-free guarantee check). Gated off the default surface
# because these helpers are not part of the public API and carry no semver guarantee.
test-utils = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Workspace: the `ordvec-python` member holds the PyO3/maturin bindings shipped to
# PyPI as `ordvec`; `ordvec-manifest-python` holds the PyPI bindings shipped as
# `ordvec-manifest`; `ordvec-ffi` holds the C ABI; and `ordvec-manifest` is a
# lockstep manifest verifier crate. `default-members = ["."]` keeps bare
# `cargo build/test/clippy` scoped to the core crate, so the existing CI gates
# are unaffected; non-core members get explicit CI lanes. The single workspace
# `Cargo.lock` carries their transitive dependencies.
[workspace]
resolver = "2"
members = ["ordvec-python", "ordvec-ffi", "ordvec-manifest", "ordvec-manifest-python", "benchmarks/beir-bench"]
default-members = ["."]
# fuzz/ is a cargo-fuzz crate built only via `cargo +nightly fuzz`. Keep it out of
# the workspace so it stays a standalone crate (its own Cargo.lock) and `cargo fuzz`
# run from fuzz/ doesn't error on "wrong workspace".
exclude = ["fuzz"]
