[package]
name = "ordvec-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Fuzz-only dependencies. These are deliberately isolated from the main
# crate's manifest: the `ordvec` library has zero system/dev dependencies
# beyond rand for test corpora, and nothing here leaks back into it.
[dependencies]
libfuzzer-sys = "0.4"
# `tempfile` gives each fuzz iteration a unique, auto-cleaned path so the
# loaders (which take a `&Path`) can be driven on arbitrary bytes without
# leaking files into $TMPDIR across millions of runs.
tempfile = "3"

[dependencies.ordvec]
path = ".."

# Prevent this benchmark/test profile from interfering with libFuzzer.
[[bin]]
name = "load_rank"
path = "fuzz_targets/load_rank.rs"
test = false
doc = false
bench = false

[[bin]]
name = "load_rankquant"
path = "fuzz_targets/load_rankquant.rs"
test = false
doc = false
bench = false

[[bin]]
name = "load_bitmap"
path = "fuzz_targets/load_bitmap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "load_sign_bitmap"
path = "fuzz_targets/load_sign_bitmap.rs"
test = false
doc = false
bench = false

# Hot-path targets (beyond the loaders): the ingest + asymmetric-search compute
# path, and the write -> load round-trip the loader targets never reach.
[[bin]]
name = "search_rankquant"
path = "fuzz_targets/search_rankquant.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_rankquant"
path = "fuzz_targets/roundtrip_rankquant.rs"
test = false
doc = false
bench = false

# FastScan b=2 compute path (`RankQuantFastscan`): the one unsafe-heavy scan
# kernel the `search_rankquant` target does not reach.
[[bin]]
name = "fastscan_b2"
path = "fuzz_targets/fastscan_b2.rs"
test = false
doc = false
bench = false
