[package]
name = "ordvec-manifest"
version = "0.6.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Manifest verifier for ordvec index provenance and sidecar artifacts"
repository = "https://github.com/Project-Navi/ordvec"
homepage = "https://github.com/Project-Navi/ordvec"
documentation = "https://docs.rs/ordvec-manifest"
readme = "README.md"
keywords = ["vector-search", "manifest", "provenance", "verification", "quantization"]
categories = ["algorithms", "command-line-utilities", "data-structures"]

[package.metadata.docs.rs]
all-features = false
features = ["cli", "sqlite-bundled"]

[lib]
name = "ordvec_manifest"
path = "src/lib.rs"

[[bin]]
name = "ordvec-manifest"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"], optional = true }
hex = "0.4.3"
ordvec = { version = "0.6.0", path = ".." }
rusqlite = { version = "0.39.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
sha2 = "0.11.0"
tempfile = "3.27.0"
uuid = { version = "1.23.2", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.183"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "wasi")'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }

[features]
default = ["cli"]
cli = ["dep:clap"]
sqlite = ["dep:rusqlite"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]
